<package format="2">
    <name>velo_cost_filter</name>
    <version>0.1.0</version>
    <description>Filters cost map errors in velodyne_points.</description>
    <maintainer email="kyscott@umich.edu">Kyle</maintainer>
    <license>BSD 3-Clause License</license>

    <url type="repository">https://github.com/umigv/velo_cost_filter</url>
    <author>Hersh Vakharia, Kyle Scott</author>

    <buildtool_depend>catkin</buildtool_depend>

    <depend>roscpp</depend>
    <depend>sensor_msgs</depend>
</package>